INT-391 fix wrapping collection stats, fix sidebar list styling in connection window

--- a/styles/index.less
+++ b/styles/index.less
@@ -125,9 +125,11 @@ html, body{
 .collection-stats-holder {
   position: absolute;
   right: 20px;
+  text-align: right;
+  min-width: 450px;
 }
 .collection-stats {
-  float: left;
+  display: inline-block;
   font-weight: 200;
   list-style: none;
   padding: 0 30px 0 0;
